Fix RTL Support (#689)
Fixes rtl.html, and also adds a new example (examples/rtl-update.html) to show
updating RTL after the initial creation of the scrollbar. Also tested in an
actual use case which was previously infinite-scrolling to the right in Chrome.

Couple of items to call out:

- Inspired by https://github.com/utatti/perfect-scrollbar/pull/744 :)
- RTL felt more like a status than a sub-element, but then I don't use BEM
- This does not include [line 84 of Ahmad's changes](https://github.com/utatti/perfect-scrollbar/pull/744/files#diff-9f8d3ecb2771fa202f724209c5d0fdb0R84), as I couldn't
  identify a need for that change (or in fact any behavioral difference with it)
- I'm not 100% comfortable with the magic number 9, but figured someone else
  might be able to quickly identify it instead of my digging around :)

Please let me know if you have any questions.

--- a/css/perfect-scrollbar.css
+++ b/css/perfect-scrollbar.css
@@ -88,6 +88,11 @@
   position: absolute;
 }
 
+.ps--rtl > .ps__rail-y > .ps__thumb-y {
+  left: 2px;
+  right: unset;
+}
+
 .ps__rail-x:hover > .ps__thumb-x,
 .ps__rail-x:focus > .ps__thumb-x,
 .ps__rail-x.ps--clicking .ps__thumb-x {
